--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: dbt
+name: deploy
 on:
   push:
     branches:
@@ -10,12 +10,12 @@ jobs:
     steps:
       - name: Checkout repo
         uses: actions/checkout@v3
-      - name: Authenticate
-        uses: "google-github-actions/auth@v0.7.1"
+      - name: Authenticate Google Cloud
+        uses: google-github-actions/auth@v0
         with:
           credentials_json: ${{ secrets.GCP_KEYFILE }}
       - name: Deploy points
-        uses: "google-github-actions/deploy-cloud-functions@v0"
+        uses: google-github-actions/deploy-cloud-functions@v0
         with:
           name: points
           runtime: python39
