--- a/.github/workflows/train.yml
+++ b/.github/workflows/train.yml
@@ -1,26 +1,63 @@
 name: Train Model
+
+on:
+  workflow_dispatch:
+    inputs:
+      n_trials:
+        required: true
+        default: "100"
+        type: string
+      timeout:
+        required: true
+        default: "60"
+        type: string
+      max_players_per_club:
+        required: true
+        default: "5"
+        type: string
+      dropout:
+        required: true
+        default: "0"
+        type: string
+      n_times:
+        required: true
+        default: "0"
+        type: string
 jobs:
   deploy:
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout repo
         uses: actions/checkout@v3
+
       - name: Authenticate Google Cloud
         uses: google-github-actions/auth@v0
         with:
           credentials_json: ${{ secrets.GCP_KEYFILE }}
+
       - name: Set up Google Cloud SDK
         uses: google-github-actions/setup-gcloud@v0
+
       - name: Setup Python
         uses: actions/setup-python@v3
         with:
           python-version: "3.9"
+
       - name: Install requirements
         run: pip install -r function_points/requirements-train.txt
+
       - name: Retrain
-        run: python train.py
+        run: |
+          python train.py \
+          --n-trials {{ inputs.n_trials }} \
+          --timeout {{ inputs.timeout}} \
+          --max-players-per-club {{ inputs.max_players_per_club }} \
+          --dropout {{ inputs.dropout }} \
+          --n-times {{ inputs.n_times }}
         env:
           DRAFT_URL: ${{ secrets.DRAFT_URL }}
           DRAFT_KEY: ${{ secrets.DRAFT_KEY }}
+
       - name: Upload artifact
         run: gcloud storage cp model.txt gs://${{ secrets.BUCKET_NAME }}/points/model.txt
