--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -10,8 +10,14 @@ jobs:
     with:
       environment: dev
     secrets: inherit
+
   train:
     uses: ./.github/workflows/train.yml
     with:
       environment: dev
+      n_trials: 100
+      timeout: null
+      max_players_per_club: 5
+      dropout: 0.0
+      n_times: 1
     secrets: inherit
