--- a/.github/workflows/train.yml
+++ b/.github/workflows/train.yml
@@ -45,7 +45,7 @@ jobs:
           python-version: "3.9"
 
       - name: Install requirements
-        run: pip install -r function_points/requirements-train.txt
+        run: pip install -r requirements-train.txt
 
       - name: Retrain
         run: |
