use string instead of int for n_trials

--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -15,7 +15,7 @@ jobs:
     uses: ./.github/workflows/train.yml
     with:
       environment: dev
-      n_trials: 100
+      n_trials: "100"
       timeout: null
       max_players_per_club: 5
       dropout: 0.0
