--- a/.github/workflows/train.yml
+++ b/.github/workflows/train.yml
@@ -8,7 +8,7 @@ on:
         type: string
       n_trials:
         required: false
-        type: string
+        type: int
       timeout:
         required: false
         type: string
