--- a/.github/workflows/train_dev.yml
+++ b/.github/workflows/train_dev.yml
@@ -12,7 +12,7 @@ on:
       - .github/workflows/train_dev.yml
 
   schedule:
-    - cron:  '0 0 * * 3'
+    - cron:  '0 0 * * *'
 
   workflow_dispatch:
     inputs:
