--- a/.github/workflows/train_main.yml
+++ b/.github/workflows/train_main.yml
@@ -1,8 +1,19 @@
 name: Train Main
 
 on:
+  push:
+    branches:
+      - main
+    paths:
+      - train.py
+      - query.sql
+      - requirements-train.txt
+      - .github/workflows/train.yml
+      - .github/workflows/train_dev.yml
+
   schedule:
-    - cron:  '0 0 * * 3'
+    - cron:  '0 0 * * *'
+
   workflow_dispatch:
     inputs:
       n_trials:
