--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,16 +1,19 @@
 name: Deploy
 
 on:
-  workflow_call:
-    inputs:
-      environment:
-        required: true
-        type: string
+  push:
+    branches:
+      - main
+      - dev
+    paths:
+      - main.py
+      - requirements.txt
+      - .github/workflows/deploy.yml
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
-    environment: ${{ inputs.environment }}
+    environment: ${{ github.REF_NAME }}
 
     steps:
       - name: Checkout repo
