--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -32,6 +32,8 @@ jobs:
 
       - name: Test
         run: pytest --cov=./ --cov-report=xml --log-cli-level=INFO
+        env:
+          BUCKET_NAME: ${{ secrets.BUCKET_NAME }}
 
       - name: Code coverage
         uses: codecov/codecov-action@v3
