--- a/.github/workflows/linting.yml
+++ b/.github/workflows/linting.yml
@@ -9,7 +9,7 @@ on:
 jobs:
   linting:
     runs-on: ubuntu-latest
-    environment: ${{ github.BASE_REF }}
+    environment: dev
 
     steps:
       - name: Checkout repo
