--- a/.github/workflows/train.yml
+++ b/.github/workflows/train.yml
@@ -45,7 +45,8 @@ jobs:
           --n-trials 1000 \
           --max-players-per-club 5 \
           --dropout 0.1 \
-          --n-times 50
+          --n-times 50 \
+          --k 20
         env:
           DRAFT_URL: ${{ secrets.DRAFT_URL }}
           DRAFT_KEY: ${{ secrets.DRAFT_KEY }}
