--- a/.github/workflows/experiment.yml
+++ b/.github/workflows/experiment.yml
@@ -6,23 +6,23 @@ on:
       n_trials:
         description: Number of trials
         required: true
-        default: 1000
+        default: '1000'
       n_trials:
         description: Max players per club
         required: true
-        default: 5
+        default: '5'
       dropout:
         description: Dropout
         required: true
-        default: 0.1
+        default: '0.1'
       n_times:
         description: Number of drafts on each round
         required: true
-        default: 0.1
+        default: '0.1'
       k:
         description: NDCG K parameter
         required: true
-        default: 20      
+        default: '20'      
 
 jobs:
   experiment:
