--- a/.github/workflows/experiment.yml
+++ b/.github/workflows/experiment.yml
@@ -1,6 +1,12 @@
 name: Experiment
 
 on:
+  push:
+    branches:
+      - main
+      - dev
+    paths:
+      - .github/workflows/experiment.yml
   workflow_dispatch:
     inputs:
       n_trials:
