--- a/.github/workflows/experiment.yml
+++ b/.github/workflows/experiment.yml
@@ -1,19 +1,13 @@
 name: Experiment
 
 on:
-  # push:
-  #   branches:
-  #     - main
-  #     - dev
-  #   paths:
-  #     - .github/workflows/experiment.yml
   workflow_dispatch:
     inputs:
       n_trials:
         description: Number of trials
         required: true
         default: '1000'
-      n_trials:
+      max_players_per_club:
         description: Max players per club
         required: true
         default: '5'
