--- a/.github/workflows/experiment.yml
+++ b/.github/workflows/experiment.yml
@@ -2,27 +2,27 @@ name: Experiment
 
 on:
   workflow_dispatch:
-    # inputs:
-    #   n_trials:
-    #     description: Number of trials
-    #     required: true
-    #     default: '1000'
-    #   max_players_per_club:
-    #     description: Max players per club
-    #     required: true
-    #     default: '5'
-    #   dropout:
-    #     description: Dropout
-    #     required: true
-    #     default: '0.1'
-    #   n_times:
-    #     description: Number of drafts on each round
-    #     required: true
-    #     default: '0.1'
-    #   k:
-    #     description: NDCG K parameter
-    #     required: true
-    #     default: '20'      
+    inputs:
+      n_trials:
+        description: Number of trials
+        required: true
+        default: '1000'
+      max_players_per_club:
+        description: Max players per club
+        required: true
+        default: '5'
+      dropout:
+        description: Dropout
+        required: true
+        default: '0.1'
+      n_times:
+        description: Number of drafts on each round
+        required: true
+        default: '0.1'
+      k:
+        description: NDCG K parameter
+        required: true
+        default: '20'      
 
 jobs:
   experiment:
