--- a/.github/workflows/experiment.yml
+++ b/.github/workflows/experiment.yml
@@ -15,6 +15,10 @@ on:
         description: Dropout
         required: true
         default: 0.1
+      dropout_type:
+        description: Dropout type
+        required: true
+        default: position
       n_times:
         description: Number of drafts
         default: 0.1
@@ -55,8 +59,8 @@ jobs:
           --n-trials {{ github.event.inputs.n_trials }} \
           --max-players-per-club {{ github.event.inputs.max_players_per_club }} \
           --dropout {{ github.event.inputs.dropout }} \
+          --dropout-type {{ github.event.inputs.dropout_type }} \
           --n-times {{ github.event.inputs.n_times }} \
-          --k {{ github.event.inputs.k }} \
           -m {{ github.event.inputs.notes }} \
           -t 'experiment.yml'
         env:
