--- a/.github/workflows/train.yml
+++ b/.github/workflows/train.yml
@@ -45,6 +45,7 @@ jobs:
           --n-trials 1000 \
           --max-players-per-club 5 \
           --dropout 0.1 \
+          --dropout-type position_club \
           --n-times 50 \
           --k 20 \
           -t 'train.yml'
