--- a/.github/workflows/experiment.yml
+++ b/.github/workflows/experiment.yml
@@ -6,26 +6,26 @@ on:
       n_trials:
         description: Number of trials
         required: true
-        default: 1000
+        default: '1000'
       max_players_per_club:
         description: Max players per club
         required: true
-        default: 5
+        default: '5'
       dropout:
         description: Dropout
         required: true
-        default: 0.1
+        default: '0.1'
       dropout_type:
         description: Dropout Type
         required: true
         default: position_club
       n_times:
         description: Number of drafts
-        default: 50
+        default: '50'
       k:
         description: NDCG K
         required: true
-        default: 20
+        default: '20'
       notes:
         description: Notes
         required: false
