--- a/.github/workflows/experiment.yml
+++ b/.github/workflows/experiment.yml
@@ -6,7 +6,7 @@ on:
       n_trials:
         description: Number of trials
         required: true
-        default: '1000'
+        default: '250'
       max_players_per_club:
         description: Max players per club
         required: true
@@ -18,7 +18,7 @@ on:
       dropout_type:
         description: Dropout Type
         required: true
-        default: position_club
+        default: club
       n_times:
         description: Number of drafts
         default: '50'
